# PriceComparisonSystem

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
core/: settings.py  urls.py
core/enums/: channels.py  platforms.py
core/mixins/: admin.py  serializers.py
core/models/: base.py
core/permissions/: defaul.py
core/utils/: format_values.py  logger.py
products/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
products/migrations/: 0001_initial.py  0002_productplatform.py  0003_pricealert.py  0004_pricehistory.py  0005_productplatform_current_price_and_more.py  0006_alter_productplatform_current_price_and_more.py  0007_alter_pricehistory_last_checked_at_and_more.py
products/services/: price_collector.py  price_updater.py
products/tests/models/: test_price_alert.py  test_price_history.py  test_product.py  test_product_platform.py
scrapers/: test.py
scrapers/browsers/: playwright_automation.py
scrapers/dto/: exception.py  price_collected.py
scrapers/factories/: automation_factory.py  platform_factory.py
scrapers/implementations/: playwright_automation.py
scrapers/interfaces/: automation.py
services/: __init__.py  price_alert.py  price_collector.py  price_parser.py  price_updater.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
