[project]
name = "pricecomparisonsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.17.0",
    "djangorestframework-simplejwt>=5.5.1",
    "playwright>=1.58.0",
    "python-decouple>=3.8",
]
